istio/owner-rest-version-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: owner-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: owner
        version: v1
    spec:
      containers:
      - name: owner
        image: harins/spring-petclinic-owner-rest
        ports:
        - name: http
          containerPort: 9966
---
apiVersion: v1
kind: Service
metadata:
  name: owner
  labels:
    app: owner
spec:
  selector:
    app: owner
  ports:
  - name: http
    port: 9966
    targetPort: 9966
