istio/pet-rest-version-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pet-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pet
        version: v1
    spec:
      containers:
      - name: pet
        image: harins/spring-petclinic-pet-rest
        ports:
        - name: http
          containerPort: 9966
---
apiVersion: v1
kind: Service
metadata:
  name: pet
  labels:
    app: pet
spec:
  selector:
    app: pet
  ports:
  - name: http
    port: 9966
    targetPort: 9966
