istio/pettype-rest-version-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pettype-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pettype
        version: v1
    spec:
      containers:
      - name: pettype
        image: harins/spring-petclinic-pettype-rest
        ports:
        - name: http
          containerPort: 9966
---
apiVersion: v1
kind: Service
metadata:
  name: pettype
  labels:
    app: pettype
spec:
  selector:
    app: pettype
  ports:
  - name: http
    port: 9966
    targetPort: 9966
