istio/user-rest-version-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      containers:
      - name: user
        image: harins/spring-petclinic-user-rest
        ports:
        - name: http
          containerPort: 9966
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  selector:
    app: user
  ports:
  - name: http
    port: 9966
    targetPort: 9966
