istio/vet-rest-version-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vet-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vet
        version: v1
    spec:
      containers:
      - name: vet
        image: harins/spring-petclinic-vet-rest
        ports:
        - name: http
          containerPort: 9966
---
apiVersion: v1
kind: Service
metadata:
  name: vet
  labels:
    app: vet
spec:
  selector:
    app: vet
  ports:
  - name: http
    port: 9966
    targetPort: 9966
