istio/petclinic-pet-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: petclinic-pet-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petclinic-pet
spec:
  hosts:
  - "*"
  gateways:
  - petclinic-pet-gateway
  http:
  - match:
    - uri:
        prefix: /petclinic/api/pets/*
    - uri:
        prefix: /petclinic/api/pets
    route:
    - destination:
        host: pet.default.svc.cluster.local
        port:
          number: 9966
