istio/petclinic-pettype-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: petclinic-pettype-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petclinic-pettype
spec:
  hosts:
  - "*"
  gateways:
  - petclinic-pettype-gateway
  http:
  - match:
    - uri:
        prefix: /petclinic/api/pettypes/*
    - uri:
        prefix: /petclinic/api/pettypes
    route:
    - destination:
        host: pettype.default.svc.cluster.local
        port:
          number: 9966
